@@ -7,3 +7,4 @@ v1.0
 - added light to helmets crafted from technic_armor helmets
 - added light to helmets crafted from xtraarmor helmets
 - added light to helmets crafted from amber helmets
+- added light to helmets crafted from rainbow_ore helmets
